plugins {
    id 'idea'
    id 'nebula.release' version '15.3.0'
    id 'org.springframework.boot' version '2.4.0-M4' apply false
    id 'io.spring.dependency-management' version '1.0.10.RELEASE' apply false
    id 'com.github.spotbugs' version '4.5.1' apply false
//    todo checkstyle
}

group = 'dev.tomek'

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.github.spotbugs'

    sourceCompatibility = 15
    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
        it.options.compilerArgs.add('-Xlint:preview')
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
    }

    dependencies {
        apply plugin: 'org.springframework.boot'
        apply plugin: 'io.spring.dependency-management'
        apply plugin: 'com.github.spotbugs'

        implementation 'org.springframework.boot:spring-boot-starter-activemq'
        implementation 'org.springframework.amqp:spring-rabbit'
        implementation 'org.apache.pulsar:pulsar-client:2.6.1'
        implementation 'io.nats:jnats:2.8.0'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        // spring-cloud-stream + nats
//        implementation 'org.springframework.cloud:spring-cloud-stream:3.0.8.RELEASE'
//        implementation 'io.nats:nats-spring-boot-starter:0.4.0'
//        implementation 'io.nats:nats-spring-cloud-stream-binder:0.4.0'

        final def lombokVersion = '1.18.14'
        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"

        // for serializing records
        final jacksonVersion = '2.12.0-rc1'
        implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
        implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
        implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"

        compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs.toolVersion.get()}"
    }

    if (!project.name.endsWith("common")) {

        dependencies {
            implementation 'org.springframework.boot:spring-boot-starter-webflux'
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
            runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
            implementation project(':common')

            implementation 'org.apache.kafka:kafka-clients:2.5.0'

            testImplementation 'org.springframework.boot:spring-boot-starter-test'
            testImplementation 'io.projectreactor:reactor-test'
        }

        test {
            useJUnitPlatform()
        }
    }

    spotbugs {
        toolVersion = '4.1.4'
    }

    spotbugsMain {
        reports {
            html.enabled = true
        }
    }
}
